K8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: load-balancer-dns
      http:
        paths:
          - path: /live
            pathType: Prefix
            backend:
              service:
                name: spring-boot-service
                port:
                  number: 80
